--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jombeli-back",
   "version": "1.0.0",
-  "description": "",
+  "description": "scrap",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js"
@@ -10,19 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vitalets/google-translate-api": "^3.0.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-translate-api": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
-    "nodemon": "^1.19.4",
-    "request": "^2.88.0",
-    "tunnel": "0.0.6"
+    "nodemon": "^2.0.2",
+    "request": "^2.88.0"
   }
 }
